misc/engulf-solo.template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Parameters" : {
      
    "InstanceType" : {
      "Description" : "EC2 instance type",
      "Type" : "String",
      "Default" : "c1.medium",
      "AllowedValues" : [ "t1.micro","m1.small","m1.medium","m1.large","m1.xlarge","m2.xlarge","m2.2xlarge","m2.4xlarge","c1.medium","c1.xlarge","cc1.4xlarge","cc2.8xlarge","cg1.4xlarge"],
      "ConstraintDescription" : "must be a valid EC2 instance type."
    }
  },
  "Resources": {
    "engulfSolo": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "AvailabilityZone": "us-east-1e",
        "DisableApiTermination": "FALSE",
        "ImageId": "ami-5f2a9f36",
        "InstanceType": {"Ref": "InstanceType"},
        "KernelId": "aki-825ea7eb",
        "Monitoring": "false",
        "SecurityGroups": [
          {
            "Ref": "sgdefault"
          }
        ],
        "Tags": [
          {
            "Key": "Name",
            "Value": "Engulf-Standalone"
          }
        ]
      }
    },
    "sgdefault": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "default group",
        "SecurityGroupIngress": [
          {
            "IpProtocol": "tcp",
            "FromPort": "22",
            "ToPort": "22",
            "CidrIp": "0.0.0.0/0"
          },
          {
            "IpProtocol": "tcp",
            "FromPort": "8080",
            "ToPort": "8080",
            "CidrIp": "0.0.0.0/0"
          }
        ]
      }
    },
    "ingress1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupName": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "tcp",
        "FromPort": "0",
        "ToPort": "65535",
        "SourceSecurityGroupName": {
          "Ref": "sgdefault"
        }
      }
    },
    "ingress2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupName": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "udp",
        "FromPort": "0",
        "ToPort": "65535",
        "SourceSecurityGroupName": {
          "Ref": "sgdefault"
        }
      }
    },
    "ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupName": {
          "Ref": "sgdefault"
        },
        "IpProtocol": "icmp",
        "FromPort": "-1",
        "ToPort": "-1",
        "SourceSecurityGroupName": {
          "Ref": "sgdefault"
        }
      }
    }
  },
  "Description": "Engulf Solo",
  "Outputs": {
    "URL": {
      "Value": {
        "Fn::Join": ["", ["http://", {"Fn::GetAtt": ["engulfSolo", "PublicIp"]}, ":8080"]]
      }
    }
  }
}
